--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <script type="module" src="/js/main.js"></script>
     </head>
     <body id="app">
-        <header :class="{ dark: dark }">
+        <header :class="dark">
             <div class="logo">
                 <h2>SFCL</h2>
                 <p>v2.0</p>
